--- a/Analytics_Task.ipynb
+++ b/Analytics_Task.ipynb
@@ -44,7 +44,7 @@
     }
    ],
    "source": [
-    "eor_contracts = pd.read_csv('C:/Users/Ajibola/Documents/mpg.csv')\n",
+    "eor_contracts = pd.read_csv('seeds/eor_contracts_activated.csv')\n",
     "mpg.head()\n"
    ]
   },
